--- a/documents/references.bib
+++ b/documents/references.bib
@@ -136,3 +136,26 @@ title = {Risk factors for equine laminitis: A case-control study conducted in ve
 volume = {1},
 year = {2013},
 }
+
+@article{halpern2002continuing,
+  title={The continuing unethical conduct of underpowered clinical trials},
+  author={Halpern, Scott D and Karlawish, Jason HT and Berlin, Jesse A},
+  journal={Jama},
+  volume={288},
+  number={3},
+  pages={358--362},
+  year={2002},
+  publisher={American Medical Association}
+}
+
+@article{hofmeister2007sample,
+  title={Sample size and statistical power in the small-animal analgesia literature},
+  author={Hofmeister, EH and King, J and Read, MR and Budsberg, SC},
+  journal={Journal of Small Animal Practice},
+  volume={48},
+  number={2},
+  pages={76--79},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
