--- a/documents/sim_paper.rmd
+++ b/documents/sim_paper.rmd
@@ -41,7 +41,7 @@ Richard Evans ${^\dagger}$
 
 ${\dagger}$ Corresponding Author
 
-Masonic Cancer Center  
+Clinical and Translational Science Institute  
 University of Minnesota  
 
 \href{mailto:evan0770@umn.edu}{evan0770@umn.edu}
@@ -52,15 +52,15 @@ University of Minnesota
 
 ### Objective
 
-In orthopaedic risk-factor studies, the disease status of control subjects is not always perfectly ascertained. That means control groups may be mixtures of both unaffected cases and some unidentified affected cases. Control groups with misclassified data are called _unlabeled_. Treating unlabeled groups as disease-negative control groups is known to cause misclassification bias, but there has been little research on how the misclassification affects the statistical power of the risk association tests. In this study, we investigated the effect using unlabeled groups as control groups on the power of association tests, with the intention of demonstrating that control groups with even small misclassification rates can reduce the power of association tests.
+Sample size calculations play a central role in study design because sample size affects study interpretability and costs, and hospital resources and staff time. For most orthopaedic risk-factor studies, either the sample size calculation or the post-hoc power calculation assumes the disease status of control subjects is perfectly ascertained, when it is not. That means control groups may be mixtures of both unaffected cases and some unidentified affected cases. Control groups with misclassified data are called _unlabeled_. Treating unlabeled groups as disease-negative control groups is known to cause misclassification bias, but there has been little research on how the misclassification affects the statistical power of risk association tests. In this study, we demonstrate the consequences of using  unlabeled groups as control groups on the power of risk association tests, with the intent of showing that control groups with even small misclassification rates can reduce the power of association tests. So, sample size calculations that ignore the unlabeled aspect of control groups may underpower studies. In addition, we offer a range of correction factors to adjust sample size calculations back to 80% power.
 
 ### Materials and Methods
 
-This was a simulation study using study designs from published orthopaedic risk-factor studies. The approach was to use their designs, but simulate the data to include known proportions of misclassified affected subjects in the control group. The simulated data was used to calculate the power of the risk-association test. We calculated powers for several study designs and misclassification rates, and compared them to a reference model, which is the case then there are no misclassifications and the model is correct.
+This was a simulation study using study designs from published orthopaedic risk-factor studies. The approach was to use their designs, but simulate the data to include known proportions of misclassified affected subjects in the control group. The simulated data was used to calculate the power of a risk-association test. We calculated powers for several study designs and misclassification rates, and compared them to a reference model, which is the case then there are no misclassifications and the model is correct.
 
 ### Results
 
-Treating unlabeled data as disease-negative always reduced statistical power compared to the reference power. Power loss was greater with increasing misclassification rate. Increasing the sample size by a factor of 1.4 was adequate to regain power.
+Treating unlabeled data as disease-negative always reduced statistical power compared to the reference power. Power loss was greater with increasing misclassification rate. Increasing the sample size by a factor of 1.2 to 1.4 was adequate to regain power for these examples.
 
 ### Conclusion
 
@@ -73,23 +73,25 @@ Keywords: risk-factor, case-control, power, sample size
 
 ## Introduction
 
-In risk factor studies, the positive disease status of the affected subjects is ascertained with perfect sensitivity and specificity, but sometimes the disease status of control subjects is not perfectly ascertained. That means control groups may be mixtures of both unaffected cases and some unidentified affected cases. Control groups with misclassified data are called _unlabeled_. Data with truly affected cases in the positive group and an unlabeled control group is called _positive-unlabeled_ data by the data science community.
+Sample size calculations play a central role in study design because sample size affects study costs, hospital resources and staff time for studies with little chance of success. Also, underpowered studies, with Type II errror, can be hard to interpret, and there are also serious ethical considerations with underpowered propsective studies \cite{ halpern2002continuing, hofmeister2007sample}.
 
-Examples of positive-unlabeled data are well documented in human medicine, but less so in veterinary medicine. Nevertheless, many veterinary studies the fall into the positive-unlabeled framework. For example, genome-wide association studies of cranial cruciate ligament disease (CCLD) in dogs use case-control designs. The affected cases are truly positive CCLD cases because they are enrolled from the set of dogs who have undergone knee stabilization surgery. The controls are typically five-years-old or older with no history of CCLD and pass an orthopedic veterinary exam by a board-certified surgeon. However some control dogs will have spontaneous rupture in the future, and so genetically belong in the CCLD affected group. Other control dogs may have sub-diagnostic disease. For example, a dog might appear sound on physical exam and be enrolled in the control group, but may actually have force-platform-detectable hindlimb lameness. Such a dog should not be in the control group because the lameness might be subclinical CCLD. \cite{wrehim08}
+In orthopaedic risk factor studies, the positive disease status of the affected subjects is ascertained with perfect sensitivity and specificity, but sometimes the disease status of control subjects is not perfectly ascertained. That means control groups may be mixtures of both unaffected cases and some unidentified affected cases. Control groups with misclassified data are called _unlabeled_. Data with truly affected cases in the positive group and an unlabeled control group is called _positive-unlabeled_ (PU) data by the data science community.
 
-There are other examples of PU data in the veterinary literature, typically in risk-factor studies using case-control designs. For example, Arthur et al. (2016) used a case-control design to assess the risk of osteosarcoma following fracture repair. \cite{aakj16} They noted, "There may be additional cases [in the control group] in which implant-related osteosarcoma was diagnosed in the private practice setting without referral...," suggesting that the control group may be unlabeled because some control-group cases were actually disease positive, but diagnosed outside the study. In another example, Wylie et al. 2013 studied risk factors for equine laminitis using controls obtained from an owner survey.\cite{wcvj13} The authors noted the positive-unlabeled aspect of their data, "Our study relied on owner-reported diagnoses of endocrinopathic conditions, and this may have introduced misclassification bias."
+Examples of positive-unlabeled data are well documented in human medicine, but less so in veterinary medicine. Nevertheless, many veterinary studies the fall into the positive-unlabeled framework. For example, genome-wide association studies of cranial cruciate ligament disease (CCLD) in dogs use case-control designs. The affected cases are truly positive CCLD cases because they are enrolled from the set of dogs who have undergone knee stabilization surgery. The controls are typically five-years-old or older with no history of CCLD and pass an orthopaedic veterinary exam by a board-certified surgeon. However some control dogs will have spontaneous rupture in the future, and so genetically belong in the CCLD affected group. Other control dogs may have sub-diagnostic disease. For example, a dog might appear sound on physical exam and be enrolled in the control group, but may actually have force-platform-detectable hindlimb lameness. Such a dog should not be in the control group because the lameness might be subclinical CCLD. \cite{wrehim08}
+
+There are other examples of PU data in the veterinary literature, typically in risk-factor studies using case-control designs. For example, Arthur et al. (2016) used a case-control design to assess the risk of osteosarcoma following fracture repair. \cite{aakj16} They said, "There may be additional cases [in the control group] in which implant-related osteosarcoma was diagnosed in the private practice setting without referral...," suggesting that the control group may be unlabeled because some control-group cases were actually osteosarcoma positive, but diagnosed outside the study. In another example, Wylie et al. 2013 studied risk factors for equine laminitis using controls obtained from an owner survey.\cite{wcvj13} The authors noted the positive-unlabeled aspect of their data, "Our study relied on owner-reported diagnoses of endocrinopathic conditions, and this may have introduced misclassification bias."
 
 As mentioned above, the affected cases are "labeled" positive, but the control data is "unlabeled," because dogs may be affected or unaffected. Treating the unlabeled control group as entirely unaffected is called the _naive model_. The proportion of affected dogs in the control group is called the _nondetection rate_ or _undetected rate_.
 
-Using the naive model when the nondetection rate is positive causes misclassification bias (because there affected cases in the control group), and that bias is well documented in the data science literature. \cite{bd20} The biases due to misclassification can be mitigated using models other than the naive model and with the appropriate data analysis, and there are many articles describing methods for analyzing positive-unlabeled data. Bekker provides and excellent summary of methods. Sometimes, however, researchers prefer the naive model because they believe that their small nondetection rates induce misclassification biases that are too small for practical consideration. There is some suggestion that nondetection rates under 10% do have little impact on bias. \cite{bd20}
+Using the naive model when the nondetection rate is positive causes misclassification bias (because there affected cases in the control group), and that bias is well documented in the data science literature. \cite{bd20} Biases due to misclassification can be mitigated using models other than the naive model and with the appropriate data analysis, and there are many articles describing methods for analyzing positive-unlabeled data. Bekker and Davis (2020) provides and excellent summary of methods. Sometimes, however, researchers prefer the naive model because the analysis is simpler and they believe that their small nondetection rates induce misclassification biases that are too small for practical consideration. There is some suggestion that nondetection rates under 10% do have little impact on bias. \cite{bd20}
 
 But bias in estimates (e.g., bias in regression coefficients) is just one part of the results; the other part is inference (e.g., p-values). Central to inference is the power of statistical tests. Power is used in planning a study as a measure of the ability of the study to make the correct decisions. That is, finding P<0.05 when it should. Typically, 80 percent power means that if the group parameters are truly different, then the statistical test has an 80 percent chance of obtaining p<0.05.
 
-During the design phase phase of a risk association study, researchers might calculate the sample size they need for 80% power assuming the nondetection rate is zero. That is, the there are no misclassified affected subjects in the control group. However, if after collection the data are positive unlabeled, then the naive model is incorrect and the estimated power may be less than estimated.
+During the design phase phase of risk association studies, researchers might calculate the sample size they need for 80% power assuming the nondetection rate is zero. That is, the there are no misclassified affected subjects in the control group. However, if after collection the data are positive unlabeled, then the naive model is incorrect and the estimated power may be less than estimated.
 
 We investigated the effect of positive-unlabeled data on loss of statistical power under the naive model. For comparision, the reference power is defined as the power when the naive model is correct and the group sizes are balanced. The results are described in terms power loss relative to the reference power, both percent power loss and absolute power loss. For context these two quantities are analogous to relative risk and absolute risk from epidemiology.
 
-Using a simulation, we described how statistical power changes with varying proportions of undetected positives in the naive controls, and varying the imbalance between the numbers of cases and naive controls. Our first aim was to demonstrate that the naive analysis of positive-unlabeled data reduces statistical power in risk-factor studies, even for small nondetection rates. Our second aim was to offer a correction factor to upward-adjust samples sizes and correct for the power loss described in aim 1.
+Using a simulation, we described how statistical power changes with varying proportions of undetected positives in the naive controls, and varying the imbalance between the numbers of cases and naive controls. Our first aim was to demonstrate that the naive analysis of positive-unlabeled data reduces statistical power in risk-factor studies, even for small nondetection rates. Our second aim was to offer correction factors to upward-adjust samples sizes and correct for the power loss described in aim 1.
 
 \newpage
 
@@ -132,13 +134,17 @@ The simulation algorithm was used to estimate the power of a Fisher's exact test
 
 ## Results
 
-Table 1 describes power loss for the three sample sizes, (50, 150), (150, 50), and (100, 100), and for three nondetection rates, 0, 0.05 (5%), and 0.1 (10%). To give these parameters context, if the group sizes are (50, 150) and the nondectection rate is 0.1, then the positive (affected) group has 50 cases, and the unlabeled control group (which we are treating naively) has 150 cases, 15 of which are actually affected cases. When the nondetection rate is zero, then the naive model is correct because there no affected cases in the control group. The first row is the reference power, so its loss of power compared to itself is zero. The reference power was calculated in the simulation just like all the other powers, and was estimated to be 0.82.
+Table 1 describes power loss for the three sample sizes, (50, 150), (150, 50), and (100, 100), and for three nondetection rates, 0, 0.05 (5%), and 0.1 (10%). To give these parameters context, if the group sizes are (50, 150) and the nondectection rate is 0.1, then the positive (affected) group has 50 cases, and the unlabeled control group (which we are treating naively in the analysis) has 150 cases, 15 of which are actually affected cases. When the nondetection rate is zero, the naive model is correct because there no affected cases in the control group. The first row is the reference power, so its loss of power compared to itself is zero. The reference power was calculated in the simulation just like all the other powers, and was estimated to be 0.82.
 
-Columns 5 and 6 are the power loss columns and have negative entries because for this simulation positive-unlabeled data analyzed under the naive model always had lower power, as did unbalanced data. For example, the second row shows a `r round(tab1$rel.loss[2],2)`% relative power reduction when the group sizes are balanced but five percent of the control group is actually positive cases.
+Columns 5 and 6 are the power loss columns and have negative entries because for this simulation positive-unlabeled data analyzed under the naive model always had lower power, as did unbalanced data. For example, the second row shows a `r round(tab1$rel.loss[2],2)`% relative power reduction when the group sizes are balanced but five percent (0.05) of the control group is actually positive cases.
 
-Using Table 1, increasing nondetection rate typically reduces power. However, group size imbalance can affect power loss more than relatively small nondetection rates. For example, consider rows 3, 4, and 5. For those rows, the nondetection rate is decreasing to zero, but power loss is increasing due to group imbalance. However, within an experimented with fixed group sizes (e.g., 100,100) increasing nondetection rate alway means decreased power.
+Rows 4 and 5 are correct models (i.e., no positives in the control group) and show a power loss relative to row 1 due to sample size imbalance only. So, for this small example, imbalance caused more power loss than unlabeled data for the (100, 100) model, rows 2 and 3.
 
-Table 1. Power loss.
+Using Table 1, increasing nondetection rate within a study design decreased power. For example, for the (100, 100) study design, power decreased by more than 10% as the non-detection rate increased (row 1 to 3). For the (50, 150) design, rows 3, 7, and 8, power decreased by 12.02% (22.47 - 10.45) from the correct model (row 3), but 22.47% from the reference model. 
+
+Finally, note that for this simulation, the absolute power loses are marked, but not extreme. For example, in the (100, 100) design, (rows 1 to 3) the power dropped to 0.73 (0.82 - 0.09) for row 3. 
+
+Table 1. Power loss. This table orders sample sizes by relative power loss (%). The first row is the reference power, which had an absolute power of 0.82 (82%). The last two columns represent power loss relative to 0.82, both as a percentage and absolute difference. Note that some inconsistancies in the table are due to rounding. For example, in rows 3 to 5, the absolute power is constant at 0.09, but the relative power changes. 
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 
@@ -158,8 +164,11 @@ kable(tab1,
                 position = "left")
 ```
 
-Table 2. Power improvement.
-This table shows that increasing sample sizes by about 40% brings power back to the nominal rate. Rows 1, 6, and 11, show the power for when there are no false positives. The other rows show power when there is a 10% nondection rate. The sixth column shows the percent increase in sample size. 
+\pagebreak
+
+Table 2 show how many additional subject are require to regain power when the non-detection rate is 10%. Rows 1 to 5 are for the (100, 100) design, rows 6 to 10 are for the (150, 50) design, and rows 11 to 15 are for the (50, 150) design. As one might expect, the lower the positive-unlabeled power, the more subjects were required to bring the power up to 80%. For the unbalanced designs, the increased sample size also fixes the power loss due to imbalance. For example, in rows 1, the power is 0.69 for the original (50, 150) design with 10% nondetection rate. Row 14 shows that an additional 65 subjects, or 32.5% more subjects are required to bring the power above 80%. However, for the (100, 100) design, only 10% more subjects are required (rows 1 and 2).  
+
+Table 2. Power improvement. Rows 1, 6, and 11, show the power for when there are no false positives. The other rows show improvements in power when there is a 10% nondection rate. The sixth column shows the percent increase in sample size, and the last column is power.
 ```{r, echo=FALSE, warning=FALSE, message=FALSE, results='asis'}
 
 tab2 <- read.csv(here("data","derived","bigtable_inc_ss.csv"))
@@ -174,7 +183,7 @@ tab2 <- tab2 %>%
   relocate(false.neg, .after = n.naiv.control) %>% select(-prp.nondet)
 
 kable(tab2,
-      format="latex",
+      format="markdown",
       digits=2,
       col.names = c("Row", 
                     "N positive cases", 
@@ -193,46 +202,25 @@ kable(tab2,
 
 ```
 
+
+
 \pagebreak
 
 # Discussion
 
-Aim This study showed that under specific conditions there was modest power loss even for small proportions of undetected positives in the control group. 
+This study showed that under specific conditions there was modest power loss even for small proportions of undetected positives in the control group. That means that risk-factor studies may have lower than expected power, and therefore increased chance of Type II error. That makes interpreting such studies difficult, because a reader, based on his or her experience, might be satisfied that 100 cases and 100 controls is a sufficiently large sample size for accurate inferences, it would not be for positive-unlabeled data. It is import to note that changes in power may affect studies differently. For example, Table 1, rows 1 to 3, absolute power dropped from 0.82 (row 1) to 0.73 (row 3). using row 2, it would take about 20 additional subject to reach the reference power. If subjects are very expensive, then the apparently small drop in power (0.09) is actually large in terms of cost. On the other hand, for a resident's retrospective study, a 0.09 power drop isn't much.
 
+The working examples were the association tests for a single SNP in a GWAS studies, but the simulation results apply to any kind of study with univariate association tests, such as any risk factor study. That is a broad class of studies. Examples include the univariate associations between post-op surgical infections and various surgical conditions (e.g., boarded surgeon vs resident, manufacturer of bone plates). In that case, there may be subdiagnostic infections in the control group. Another example is univariate association tests in veterinary surveys.
 
-It also showed that for unbalanced designs, substantial increases in sample size were required to have 
+In this simulation, the undetected positives in the negative group were randomly sampled from the same population as the detected positives in the affected group. That's a common assumption (ref GU and others) but there are other models.\cite{gr04} In one such model, the undetected positives in the control group might be a subpopulation of positives defined by another variable. For example, in a CCLD GWAS study, the undetected positives in the control group might be positive dogs with low body condition score.
 
-The working example was the association test for a single SNP in a GWAS study, but the simulation results apply to any kind of study with univariate association tests, such as any risk factor study. That is a broad class of studies. Examples include the univariate associations between post-op surgical infections and various surgical conditions (e.g., boarded surgeon vs resident, manufacturer of bone plate). In that case, there may be subdiagnostic infections in the control group. Another example is univariate association tests in veterinary surveys, such as XXX. In that case, there may be subclinical ...
-
-In this simulation, the undetected positives in the negative group were randomly sampled from the same population as the detected positives in the affected group. That's a common assumption (ref GU and others) but there are other models. For example, the undetected positives in the control group might be a subpopulation of positives defined by another variable. For example, in a CCLD GWAS study, the undetected positives in the control group might be positive dogs with low BCS only. 
-
-
-
- it does not apply to the situation where binary "affectedness" changes as the function of a scaled risk factor variable. Using risk factors for CCLD example, BCS may affect spontaneous rupture. 
-
-This was a simulation study that considered the effect on statistical power of 10 percent or fewer undetected positives in the control group. The simulation used 
-
-Other papers have discussed improved tests and power. (wang, and the pan paper )
 
 \newpage
-
-### Practical implications
-
-However, the undetected-positive rate for CCLD GWAS studies is small, certainly less that 10 percent, and the low rate causes only small biases in odds ratio estimates. However, this study shows that unlabeled data also affect the inferences, and we show that even a few positive cases in the negative controls can affect the power of the study. Fortunately, positive-unlabeled data appears to reduce power, making the results reported in CCLD GWAS studies conservative.
-
 
 \bibliography{references}
 \bibliographystyle{plain}
 
-## Appendix 1.
-Table 1. Sample sizes for four GWAS studies of CCLD. The last columns shows the number of affected cases in the control group assuming 10 percent non-detection rate. 
 
-|   Study |   N   | Cases | Naive controls | Max No. undetected positives (10%) |
-|:-------------------:|:-----:|:-----:|:--------------:|:-------------:|
-| Baird et al. (2014)     | 217   | 91    | 126       |  13     |
-| Baker et al. (2021)     | 397   | 156   | 241       |  24     |
-| Cook et al. (2020)      | 333   | 190   | 143       |  14     |
-| Healy et al. (2019)     | 216   | 161   | 55        |  6      |
 
 
 
